update flow, update ships
